# Tutorial

./: Зроби це зараз 9-10.xmind
BotAssistant/: README.md
BotAssistant/Python/: Notebook.py  bot_assistant.py  bot_help.py  bot_utils.py  botsetting.py  userinterface.py  virtual_assistant.py
BotAssistant/c#Console/data/: help_dict.json  setting_dict.json
BotAssistant/c#WinBot/: WinBot.exe.config
BotAssistant/c#WinBot/data/: message_dict.json
DZ-10/: virtual_assistant.py
DZ-11/: my_utils.py  virtual_assistant.py
DZ-12/: main.py  my_utils.py  virtual_assistant.py
DZ-6/: rubbish_sort.py  rubbish_sort_recursive.py
DZ-8/: birthdays_per_week.py
DZ-9/: bot_assistant.py
DZ2-1/: dz2-1.drawio
DZ2-1/bot/: Notebook.py  bot_assistant.py  bot_help.py  botsetting.py  userinterface.py  virtual_assistant.py
DZ2-10/: README.md
DZ2-10/hw10_project/: pyproject.toml
DZ2-10/hw10_project/hw10_project/: settings.py  urls.py
DZ2-10/hw10_project/quotes/static/quotes/: style.css
DZ2-10/hw10_project/quotes/templates/quotes/: base.html  quote-add.html
DZ2-10/hw10_project/users/: forms.py  views.py
DZ2-10/hw10_project/users/templates/users/: login.html
DZ2-10/hw10_project/utils/: migration.py
DZ2-11/: README.md
DZ2-11/hw_rest_api/: main.py  pyproject.toml
DZ2-11/hw_rest_api/migrations/versions/: 7f83cce19a36_init.py
DZ2-11/hw_rest_api/src/: schemas.py
DZ2-11/hw_rest_api/src/conf/: config.ini
DZ2-11/hw_rest_api/src/database/: db.py  models.py
DZ2-11/hw_rest_api/src/repository/: contacts.py
DZ2-11/hw_rest_api/src/routes/: contacts.py
DZ2-12/: README.md
DZ2-12/hw_rest_api/: main.py  pyproject.toml
DZ2-12/hw_rest_api/migrations/versions/: 3065aa5747ba_add_users.py  fbd2d428f077_add_contacts_days_of_year.py
DZ2-12/hw_rest_api/src/: schemas.py
DZ2-12/hw_rest_api/src/database/: models.py
DZ2-12/hw_rest_api/src/repository/: users.py
DZ2-12/hw_rest_api/src/routes/: auth.py  contacts.py
DZ2-12/hw_rest_api/src/services/: auth.py
DZ2-13/hw13_project/: .gitignore  config.ini
DZ2-13/hw_rest_api/: .example.env  README.md  docker-compose.yml  main.py  pyproject.toml
DZ2-13/hw_rest_api/migrations/: env.py
DZ2-13/hw_rest_api/migrations/versions/: d97ecef99959_change_contacts.py
DZ2-13/hw_rest_api/postgres-data/base/13481/: pg_internal.init
DZ2-13/hw_rest_api/postgres-data/base/16384/: 1259  16385  16390  16392  16399  16402  16403  16405  16412  16414  16421  16422  2224  2579  2604  2606  2610  2620  2657  2658  2659  2666  2673  2699  2701  2703  2704  3455  pg_internal.init
DZ2-13/hw_rest_api/postgres-data/global/: 1262  2671  pg_control  pg_internal.init
DZ2-13/hw_rest_api/postgres-data/pg_stat/: db_0.stat  db_13481.stat  db_16384.stat  global.stat
DZ2-13/hw_rest_api/src/: schemas.py
DZ2-13/hw_rest_api/src/conf/: config.py
DZ2-13/hw_rest_api/src/database/: db.py  models.py
DZ2-13/hw_rest_api/src/repository/: contacts.py  users.py
DZ2-13/hw_rest_api/src/routes/: auth.py  contacts.py  users.py
DZ2-13/hw_rest_api/src/services/: auth.py  cloud_image.py  email.py
DZ2-14/hw_rest_api/: .coverage  README.md  main.py  pyproject.toml  test.db
DZ2-14/hw_rest_api/docs/: conf.py
DZ2-14/hw_rest_api/postgres-data/: postmaster.pid
DZ2-14/hw_rest_api/src/: schemas.py
DZ2-14/hw_rest_api/templates/: index.html
DZ2-14/hw_rest_api/tests/: conftest.py  test_main.py  test_route_auth.py  test_route_contacts.py  test_route_users.py  (+2 more)
DZ2-2/poetry/: poetry.ba
DZ2-3/1/: rubbish_sort.py  rubbish_sort_thread.py
DZ2-3/2/: factorize.py  factorize_parallel.py
DZ2-3/test0/: Hello.py  test.py
DZ2-4/: error.html  index.html  main.py  message.html  pyproject.toml  socket_server.py
DZ2-4/storage/: data.json
DZ2-5/1/: README.md  cource.json  main.py  main2.py
DZ2-5/chat/: README.md  index.html  server.py
DZ2-5/exchange/: README.md  cource.json  pyproject.toml
DZ2-5/exchange_multi_session/: README.md  pyproject.toml
DZ2-6/homework/: README.md  create_db.py  create_tables.sql  homework.db  pyproject.toml  query.py  query_01.sql  query_02.sql  query_03.sql  query_04.sql  query_05.sql  query_06.sql  query_07.sql  query_08.sql  query_09.sql  query_10.sql  query_11.sql  query_12.sql  seeds.py
DZ2-7/homework/: config.ini  main.py  pyproject.toml  seeds.py
DZ2-7/homework/alembic/: env.py
DZ2-7/homework/alembic/versions/: 60c744355b87_init.py
DZ2-7/homework/src/: db.py  models.py
DZ2-8/homework/: README.md  config.ini  crud.py  load.py  main.py  models.py  pyproject.toml  test.py
DZ2-8/homework2/: consumer_email.py  consumer_sms.py  crud.py  models.py  producer.py  pyproject.toml
DZ2-9/homework/: README.md  console.py  crud.py  load.py  main.py  models.py  pyproject.toml
DZ2-9/hw_scrapy/: README.md  load.py  main.py  pyproject.toml
DZ2-9/hw_scrapy/data/: authors.json
DZ3-1/: Hw1.ipynb
DZ3-10/: Hw10-2 (1).ipynb  Hw10.ipynb
DZ3-11/: Hw11.ipynb  keras_imdb.ipynb
DZ3-12/: Hw12.ipynb
DZ3-2/: Hw2.1.ipynb  Hw2.2.ipynb  Hw2.3.ipynb
DZ3-3/: Hw3.ipynb
DZ3-4/: Hw4.ipynb
DZ3-5/: Hw5.ipynb
DZ3-6/: Hw6.ipynb
DZ3-7/: Hw7.ipynb
DZ3-8/: HW_8_new (1).ipynb  Hw8.ipynb
DZ3-9/: Hw9.ipynb
HTML_CSS/DZ-1/: index.html
clean_folder/: README.md  pyproject.toml
clean_folder/src/clean_folder/: clean.py
clean_folder/src/clean_folder_14urka.egg-info/: PKG-INFO  SOURCES.txt
(+102 files in other folders)
