[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clean_folder_14urka"
version = "0.0.1"
authors = [
  { name="Yurii Nikitchenko", email="14urka@gmail.com" },
]
description = "Parsing and grouping files of a certain folder according to a given rule"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/NikYurchik/Tutorial/tree/main/clean_folder"