[tool.poetry]
name = "hw-rest-api"
version = "0.1.0"
description = ""
authors = ["NikYurchik <14urka@gmail.com>"]
readme = "README.md"
packages = [{include = "hw_rest_api"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.20"
fastapi = "^0.103.0"
psycopg2 = "^2.9.7"
alembic = "^1.11.3"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pydantic = {extras = ["email"], version = "^2.3.0"}
jinja2 = "^3.1.2"
libgravatar = "^1.0.4"
python-multipart = "^0.0.6"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
fastapi-jwt-auth = "^0.5.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
