[tool.poetry]
name = "exchange_multi_session"
version = "0.1.0"
description = ""
authors = ["NikYurchik <14urka@gmail.com>"]
readme = "README.md"
packages = [{include = "exchange_rate"}]

[tool.poetry.dependencies]
python = "^3.10"
aiopath = "^0.6.11"
aiofile = "^3.8.7"
aiohttp = "^3.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
